src/vs/workbench/contrib/welcomeGettingStarted/browser/media/gettingStarted.css
/* ... */
.monaco-workbench .part.editor > .content .gettingStartedContainer .index-list.getting-started .button-link {
	margin: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .index-list.getting-started .see-all-walkthroughs {
	display: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.someWalkthroughsHidden .index-list.getting-started .see-all-walkthroughs {
	display: inline;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.noWalkthroughs .index-list.getting-started  {
	display: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .getting-started-detail-right img {
	object-fit: contain;
	cursor: unset;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .getting-started-detail-right img.clickable {
	cursor: pointer;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer button {
	border: none;
	color: inherit;
	text-align: left;
	padding: 16px;
	font-size: 13px;
	margin: 1px 0;
	/* makes room for focus border */
	font-family: inherit;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer button:hover {
	cursor: pointer;
}

/* Don't show focus outline on mouse click. Instead only show outline on keyboard focus. */
.monaco-workbench .part.editor > .content .gettingStartedContainer button:focus {
	outline: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer button:focus-visible {
	outline: 1px solid var(--vscode-focusBorder);
	outline-offset: -1px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .prev-button.button-link {
	position: absolute;
	left: 40px;
	top: 5px;
	padding: 0 2px 2px;
	margin: 10px;
	z-index: 1;
	display: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.width-semi-constrained .prev-button.button-link {
	left: 0;
	top: -10px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained .prev-button.button-link {
	left: 0;
	top: -10px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained .prev-button.button-link .codicon {
	font-size: 20px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained .prev-button.button-link .moreText {
	display: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .prev-button:hover {
	cursor: pointer;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .prev-button .codicon {
	position: relative;
	top: 3px;
	left: -4px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .button-link .codicon-arrow-right {
	padding-left: 4px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .button-link .codicon-check-all {
	padding-right: 4px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide .skip {
	display: block;
	margin: 2px auto;
	width: fit-content;
	text-align: center;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails h2 {
	font-size: 26px;
	font-weight: normal;
	margin: 0 0 8px 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails h2 .codicon {
	font-size: 20px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails h3 {
	font-size: 13px;
	font-weight: 600;
	margin: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .subtitle {
	font-size: 16px;
	margin: 0;
	padding: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStarted.showCategories .gettingStartedSlideDetails {
	left: 100%;
	opacity: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStarted.showDetails .gettingStartedSlideCategories {
	left: -100%;
	opacity: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStarted.showDetails .categoriesScrollbar .scrollbar.vertical {
	display: none;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .done-next-container {
	display: flex;
	padding: 16px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .button-link {
	padding: 0;
	background: transparent;
	margin: 2px;
	cursor: pointer;
	overflow: hidden;
	text-overflow: ellipsis;
	max-width: 100%;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .done-next-container .button-link {
	display: flex;
	align-items: center;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .button-link.next {
	margin-left: auto;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .button-link:hover {
	background: transparent;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide .openAWalkthrough > button, .monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide .showOnStartup {
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 8px;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide .getting-started-checkbox {
	color: inherit !important;
	height: 18px;
	width: 18px;
	border: 1px solid transparent;
	border-radius: 3px;
	padding: 0;
	margin-right: 9px;
}


.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide .getting-started-checkbox.codicon:not(.checked)::before  {
	opacity: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideCategories > .gettingStartedCategoriesContainer > .footer p {
	margin: 0;
}

.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideCategories > .gettingStartedCategoriesContainer .index-list.start-container {
	min-height: 156px;
	margin-bottom: 16px;
}
/* ... */

